Name:             ShellCheck
Version:          0.7.1
Synopsis:         Shell script analysis tool
License:          GPL-3
License-file:     LICENSE
Category:         Static Analysis
Author:           Vidar Holen
Maintainer:       vidar@vidarholen.net
Homepage:         https://www.shellcheck.net/
Build-Type:       Simple
Cabal-Version:    >= 1.8
Bug-reports:      https://github.com/koalaman/shellcheck/issues
Description:
  The goals of ShellCheck are:
  .
  * To point out and clarify typical beginner's syntax issues,
    that causes a shell to give cryptic error messages.
  .
  * To point out and clarify typical intermediate level semantic problems,
    that causes a shell to behave strangely and counter-intuitively.
  .
  * To point out subtle caveats, corner cases and pitfalls, that may cause an
    advanced user's otherwise working script to fail under future circumstances.

Extra-Source-Files:
    -- documentation
    README.md
    shellcheck.1.md
    -- A script to build the man page using pandoc
    manpage
    -- convenience script for stripping tests
    striptests
    -- tests
    test/shellcheck.hs

source-repository head
    type: git
    location: git://github.com/koalaman/shellcheck.git

library
    hs-source-dirs: src
    if impl(ghc < 8.0)
      build-depends:
        semigroups
    build-depends:
      aeson,
      array,
      base >= 4.8.0.0 && < 5,
      bytestring,
      containers >= 0.5,
      deepseq >= 1.4.0.0,
      Diff >= 0.2.0,
      directory >= 1.2.3.0,
      mtl >= 2.2.1,
      filepath,
      parsec,
      regex-tdfa,
      QuickCheck >= 2.7.4,
      -- When cabal supports it, move this to setup-depends:
      process
    exposed-modules:
      ShellCheck.AST
      ShellCheck.ASTLib
      ShellCheck.Analytics
      ShellCheck.Analyzer
      ShellCheck.AnalyzerLib
      ShellCheck.Checker
      ShellCheck.Checks.Commands
      ShellCheck.Checks.Custom
      ShellCheck.Checks.ShellSupport
      ShellCheck.Data
      ShellCheck.Fixer
      ShellCheck.Formatter.Format
      ShellCheck.Formatter.CheckStyle
      ShellCheck.Formatter.Diff
      ShellCheck.Formatter.GCC
      ShellCheck.Formatter.JSON
      ShellCheck.Formatter.JSON1
      ShellCheck.Formatter.TTY
      ShellCheck.Formatter.Quiet
      ShellCheck.Interface
      ShellCheck.Parser
      ShellCheck.Regex
    other-modules:
      Paths_ShellCheck

executable shellcheck
    if impl(ghc < 8.0)
      build-depends:
        semigroups
    build-depends:
      aeson,
      array,
      base >= 4 && < 5,
      bytestring,
      containers,
      deepseq >= 1.4.0.0,
      Diff >= 0.2.0,
      directory >= 1.2.3.0,
      mtl >= 2.2.1,
      filepath,
      parsec >= 3.0,
      QuickCheck >= 2.7.4,
      regex-tdfa,
      ShellCheck
    main-is: shellcheck.hs

test-suite test-shellcheck
    type: exitcode-stdio-1.0
    build-depends:
      aeson,
      array,
      base >= 4 && < 5,
      bytestring,
      containers,
      deepseq >= 1.4.0.0,
      Diff >= 0.2.0,
      directory >= 1.2.3.0,
      mtl >= 2.2.1,
      filepath,
      parsec,
      QuickCheck >= 2.7.4,
      regex-tdfa,
      ShellCheck
    main-is: test/shellcheck.hs

